--- a/.web/src/index.html
+++ b/.web/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
@@ -19,34 +20,15 @@
 </head>
 
 <body>
-    <div class="ui styled accordion">
-        <div class="active title">
-            <i class="dropdown icon"></i>
-            What is a dog?
-        </div>
-        <div class="active content">
-            <p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a
-                welcome guest in many households across the world.</p>
-        </div>
-        <div class="title">
-            <i class="dropdown icon"></i>
-            What kinds of dogs are there?
-        </div>
-        <div class="content">
-            <p>There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of
-                dog that they find to be compatible with their own lifestyle and desires from a companion.</p>
-        </div>
-        <div class="title">
-            <i class="dropdown icon"></i>
-            How do you acquire a dog?
-        </div>
-        <div class="content">
-            <p>Three common ways for a prospective owner to acquire a dog is from pet shops, private owners, or
-                shelters.</p>
-            <p>A pet shop may be the most convenient way to buy a dog. Buying a dog from a private owner allows you to
-                assess the pedigree and upbringing of your dog before choosing to take it home. Lastly, finding your dog
-                from a shelter, helps give a good home to a dog who may not find one so readily.</p>
-        </div>
+    <!--(Pagina de Login)-->
+    <div class="loginCss">
+        <h1>Login</h1>
+        <input class="inputLogin" type="text" placeholder="nome">
+        <br><br>
+        <input class="inputlogin" type="passworld" placeholder="senha">
+        <br><br>
+        <button class="botaoEnviar">Enviar</button>
+    <!--(Final da Pagina de Login)-->
     </div>
 </body>
 
