--- a/.web/src/login.html
+++ b/.web/src/login.html
@@ -5,30 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="semantic/semantic.min.css">
     <script src="semantic/semantic.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('.ui.styled.accordion').accordion();
-        });
-    </script>
 
 </head>
 
 <body>
     <!--(Pagina de Login)-->
     <div class="loginCss">
-        <h1>Login</h1>
-        <input class="inputLogin" type="text" placeholder="nome">
-        <br><br>
-        <input class="inputlogin" type="passworld" placeholder="senha">
-        <br><br>
-        <button class="botaoEnviar">Enviar</button>
-    <!--(Final da Pagina de Login)-->
+        <div class="loginCss">
+            <h1>Login</h1>
+            <input class="inputlogin" type="text" placeholder="nome">
+            <br><br>
+            <input class="inputlogin" type="password" placeholder="senha">
+            <br><br>
+            <button class="botaoEnviar">Enviar</button>
+        <!--(Final da Pagina de Login)-->
+        </div>
     </div>
 </body>
 
