estilização de login com semantic

--- a/.web/src/login.html
+++ b/.web/src/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>SAR - Login</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="semantic/semantic.min.css">
@@ -15,16 +15,21 @@
 </head>
 
 <body>
-    <!--(Pagina de Login)-->
-    <div class="loginCss">
-        <div class="loginCss">
-            <h1>Login</h1>
-            <input class="inputlogin" type="text" placeholder="nome">
-            <br><br>
-            <input class="inputlogin" type="password" placeholder="senha">
-            <br><br>
-            <button class="botaoEnviar">Enviar</button>
-        <!--(Final da Pagina de Login)-->
+    <div class="background"></div>
+        <div class="login-box">
+            <h1 class="ui header">Login</h1>
+          <img src="../media/logo.png" alt="Logo" class="logo">
+            <div class="ui input">
+                <input type="text" placeholder="Usuário">
+            </div>
+            <div class="ui input">
+                <input type="password" placeholder="Senha">
+            </div>
+        <button class="ui primary button">
+        Entar
+        </button>
+        <div class="forgot-password">
+            <a href="#">Esqueci minha senha</a>
         </div>
     </div>
 </body>
