--- a/.web/src/home.html
+++ b/.web/src/home.html
@@ -67,12 +67,12 @@
             </li>
         </ul>
     </div>
-    <div class="background-home">
+ 
     <section class="home-section">
         <div class="text">Bem-vindo {user}</div>
-    </section>
-    <div class="ui huge header text-home">Últimas Notícias</div>
-    <div class="ui link cards home-section card-container">
+    
+    <div class="ui huge header text-home ">Últimas Notícias</div>
+    <div class="ui link cards card-container">
         <div class="card">
           <div class="image">
             <img src="../media/unicamp-fca.png">
@@ -143,7 +143,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 </body>
 
 <script type="text/javascript">
