--- a/.web/src/login.html
+++ b/.web/src/login.html
@@ -19,7 +19,7 @@
         <img src="../media/bg-login.png" alt="green backgroud sar">
     </div>
     <form class="form_container">
-        <div class="logo_container"></div>
+        <div class="logo_container"><img src="../media/logo.png" width="40%" alt=""></div>
         <div class="title_container">
             <p class="title">Olá!</p>
             <span class="subtitle">Entre com sua conta da Unicamp para ter acesso aos serviços SAR.</span>
