--- a/web/public/home.html
+++ b/web/public/home.html
@@ -8,10 +8,9 @@
     <title>Home - SAR</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="semantic/semantic.min.css">
-    <script src="semantic/semantic.min.js"></script>
-    <script src="home.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../media/semantic/semantic.min.css">
+    <script src="../media/semantic/semantic.min.js"></script>
+    <link rel="stylesheet" href="../assets/home.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
