--- a/web/public/login.html
+++ b/web/public/login.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>SAR - Login</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="semantic/semantic.min.css">
-    <script src="semantic/semantic.min.js"></script>
+        <link rel="stylesheet" href="../media/semantic/semantic.min.css">
+        <script src="../media/semantic/semantic.min.js"></script>
+        <link rel="stylesheet" href="../assets/login.css">
 
 </head>
 
