--- a/web/public/home.html
+++ b/web/public/home.html
@@ -8,9 +8,9 @@
     <title>Home - SAR</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../media/semantic/semantic.min.css">
-    <script src="../media/semantic/semantic.min.js"></script>
-    <link rel="stylesheet" href="../assets/home.css">
+    <link rel="stylesheet" href="../src/assets/semantic/semantic.min.css">
+    <script src="../src/assets/semantic/semantic.min.js"></script>
+    <link rel="stylesheet" href="../src/assets/home.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -74,7 +74,7 @@
     <div class="ui link cards card-container">
         <div class="card">
           <div class="image">
-            <img src="../media/unicamp-fca.png">
+            <img src="../src/assets/media/unicamp-fca.png">
           </div>
           <div class="content">
             <div class="header">Matt Giampietro</div>
@@ -97,7 +97,7 @@
         </div>
         <div class="card">
           <div class="image">
-            <img src="../media/unicamp-fca.png">
+            <img src="../src/assets/media/unicamp-fca.png">
           </div>
           <div class="content">
             <div class="header">Molly</div>
@@ -120,7 +120,7 @@
         </div>
         <div class="card">
           <div class="image">
-            <img src="../media/unicamp-fca.png">
+            <img src="../src/assets/media/unicamp-fca.png">
           </div>
           <div class="content">
             <div class="header">Elyse</div>
