--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
   <script src="./src/assets/semantic/semantic.min.js"></script>
   <link rel="stylesheet" href="./src/assets/semantic/semantic.min.css">
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="./src/assets/main.css">
 </head>
 
 <body>
