Tentando implementar Vue Router

--- a/web/public/patrimonio.html
+++ b/web/public/patrimonio.html
@@ -81,10 +81,11 @@
                 <label></label>
               </div>
             </td>
-            <th>Name</th>
-            <th>Registration Date</th>
-            <th>E-mail address</th>
-            <th>Premium Plan</th>
+            <th>Tipo</th>
+            <th>Marca</th>
+            <th>Modelo</th>
+            <th>Bancada</th>
+            <th>Status</th>
           </tr>
         </thead>
         <tbody>
@@ -97,7 +98,8 @@
             <td>John Lilki</td>
             <td>September 14, 2013</td>
             <td>jhlilk22@yahoo.com</td>
-            <td>No</td>
+            <td>5</td>
+            <td>Ativo</td>
           </tr>
           <tr>
             <td class="collapsing">
@@ -108,8 +110,9 @@
             <td>Jamie Harington</td>
             <td>January 11, 2014</td>
             <td>jamieharingonton@yahoo.com</td>
-            <td>Yes</td>
-          </tr>
+            <td>8</td>
+            <td>Ativo</td>
+          </tr>         
           <tr>
             <td class="collapsing">
               <div class="ui fitted checkbox">
@@ -119,13 +122,14 @@
             <td>Jill Lewis</td>
             <td>May 11, 2014</td>
             <td>jilsewris22@yahoo.com</td>
-            <td>Yes</td>
+            <td>12</td>
+            <td>Inativo</td>
           </tr>
         </tbody>
         <tfoot class="full-width">
           <tr>
             <th></th>
-            <th colspan="4">
+            <th colspan="5">
               <div class="ui right floated small primary labeled icon button">
                 <i class="user icon"></i> Adicionar Patrimônio
               </div>
