Alterações na tabela

--- a/web/public/patrimonio.html
+++ b/web/public/patrimonio.html
@@ -118,10 +118,6 @@
             <th>Marca</th>
             <th>Modelo</th>
             <th>Tipo</th>
-            <th>Tipo</th>
-            <th>Marca</th>
-            <th>Modelo</th>
-            <th>Bancada</th>
             <th>Status</th>
           </tr>
         </thead>
@@ -132,11 +128,10 @@
                 <input type="checkbox" class="select-checkbox"> <label></label>
               </div>
             </td>
-            <td>John Lilki</td>
-            <td>September 14, 2013</td>
-            <td>jhlilk22@yahoo.com</td>
-            <td>No</td>
             <td>5</td>
+            <td>HP</td>
+            <td>HP-750</td>
+            <td>Impressora</td>
             <td>Ativo</td>
           </tr>
           <tr>
@@ -145,26 +140,22 @@
                 <input type="checkbox" class="select-checkbox"> <label></label>
               </div>
             </td>
-            <td>Jamie Harington</td>
-            <td>January 11, 2014</td>
-            <td>jamieharingonton@yahoo.com</td>
-            <td>Yes</td>
-            <td>Ativo</td>
-          </tr>
             <td>8</td>
-            <td>Ativo</td>
-          </tr>         
+            <td>Logitech</td>
+            <td>G-213</td>
+            <td>Teclado</td>
+            <td>Ativo</td>       
           <tr>
             <td class="collapsing">
               <div class="ui fitted checkbox">
                 <input type="checkbox" class="select-checkbox"> <label></label>
               </div>
             </td>
-            <td>Jill Lewis</td>
-            <td>May 11, 2014</td>
-            <td>jilsewris22@yahoo.com</td>
-            <td>Yes</td>
-            <td>Ativo</td>
+            <td>12</td>
+            <td>Multilaser</td>
+            <td>MT-687</td>
+            <td>Mouse</td>
+            <td>Inativo</td>
           </tr>
           <tr>
             <td class="collapsing">
@@ -172,13 +163,11 @@
                 <input type="checkbox" class="select-checkbox"> <label></label>
               </div>
             </td>
+            <td>2</td>
+            <td>Samsung</td>
+            <td>Book X50</td>
+            <td>Notebook</td>
             <td>Ativo</td>
-            <td>May 11, 2014</td>
-            <td>jilsewris22@yahoo.com</td>
-            <td>Yes</td>
-            <td>Ativo</td>
-            <td>12</td>
-            <td>Inativo</td>
           </tr>
         </tbody>
         <tfoot class="full-width">
@@ -186,10 +175,13 @@
             <th></th>
             <th colspan="5">
               <div class="ui right floated small primary labeled icon button">
-                <i class="user icon"></i> Adicionar Patrimônio
+                <i class="keyboard outline icon"></i> Adicionar Patrimônio
               </div>
               <div class="ui small button">
                 Excluir
+              </div>
+              <div class="ui small button">
+                Alterar
               </div>
               <div class="ui small button">
                 Ativar
@@ -202,7 +194,7 @@
         </tfoot>
       </table>
     </div>
-      <div class="ui container add-form" style="display: none;">
+      <div class="ui container add-form" style="display: none; margin-top: 20px;">
         <h2 class="ui">Adicionar Patrimônio</h2>
         <form class="ui form">
           <div class="fields">
