--- a/web/public/settings.html
+++ b/web/public/settings.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    <title>Settings</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../src/assets/settings.css">
+  <title>Settings</title>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <link rel="stylesheet" href="../src/assets/semantic/semantic.min.css">
+  <script src="../src/assets/semantic/semantic.min.js"></script>
+  <link rel="stylesheet" href="../src/assets/home.css">
+  <link rel="stylesheet" href="../src/assets/patrimonio.css">
+  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="../src/assets/main.css">
 </head>
+
 <body>
-    <div class="settings">
+  <!-- <div class="settings">
         <h2>Configurações</h2>
         <form>
           <div class="setting-group">
@@ -61,7 +70,10 @@
             <input type="submit" value="Salvar">
           </div>
         </form>
-      </div>
-       
+      </div> -->
+  <section class="home-section">
+    
+  </section>
 </body>
+
 </html>
