--- a/web/public/login.html
+++ b/web/public/login.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../src/assets/semantic/semantic.min.css">
     <script src="../src/assets/semantic/semantic.min.js"></script>
     <link rel="stylesheet" href="../src/assets/login.css">
+    <meta name="google-signin-client_id"
+        content="1090697719532-djuhtf5mi9r69ci55jr16ib9hg9ssnbc.apps.googleusercontent.com">
 
 </head>
 
@@ -26,7 +28,7 @@
         </div>
         <br>
 
-        <button class="button sign-in_ggls">
+        <button class="button sign-in_ggls g-signin2" data-onsuccess="onSignIn()">
             <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid" viewBox="0 0 256 262">
                 <path fill="#4285F4"
                     d="M255.878 133.451c0-10.734-.871-18.567-2.756-26.69H130.55v48.448h71.947c-1.45 12.04-9.283 30.172-26.69 42.356l-.244 1.622 38.755 30.023 2.685.268c24.659-22.774 38.875-56.282 38.875-96.027">
@@ -45,6 +47,8 @@
         </button>
         <p class="note">Ajuda</p>
     </form>
+    <script src="../src/assets/google.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 </body>
 
 </html>
